# organize-me

./: .dockerignore  .env.local.example  .gitignore  AUTOMATION_README.md  CLAUDE-LOOP-README.md  CLAUDE-LOOP-SETUP.md  CLAUDE.md  Dockerfile  NEXT-ISSUE-LOOP-GUIDE.md  QUICK-START.md  README.md  automate_implementation.ps1  automate_implementation.py  claude-control.ps1  claude-loop-config.example.ps1  claude-loop.ps1  issues_config.json  pyproject.toml  run-claude-loop.bat  run-next-issue-loop.bat  supervisord.conf
.github/workflows/: ci.yml  deploy.yml  publish-chrome.yml
app/: main.py  worker.py
app/auth/: backend.py  oauth.py  users.py
app/core/: calendar_url.py  config.py  date_parser.py  initials.py  message_filter.py  nav.py  onboarding.py  prompts.py  registry.py  security.py  templating.py
app/db/: session.py  url.py
app/models/: __init__.py  event.py  llm_prompt.py  oauth_account.py  processing_run.py  processing_step.py  storage_config.py  user.py  user_settings.py
app/pages/: app_shell.py  auth.py  dashboard.py  landing.py  logs.py  nav.py  processing.py  profile.py  prompt.py  settings.py  upload.py
app/schemas/: event.py  llm_prompt.py  pipeline.py  processing_run.py  storage_config.py  user.py
app/services/: processing_logs.py  user_settings.py
app/templates/: authenticated_base.html  base.html  dashboard.html  landing.html  logs.html  processing.html  processing_run_detail.html  profile.html  prompt.html  settings.html  upload.html
docs/: changelog-archive.md  changelog.md  creating-prerequisites.md  feature-workflow.md  host-integration-guide.md  how-to-add-a-hosted-app.md  implementation-plan.md  platform-restructure-design.md  platform-restructure-prd.md  prd.md  project-status.md  secrets-and-accounts.md  technical-approach.md
docs/adr/: 0001-event-creator-worker-cpu-throttling.md  design-refresh-dark-mode-css-strategy.md  design-refresh-per-service-tailwind-build.md  design-refresh-shared-component-library.md  design-refresh-sidebar-restyle-in-place.md  doc-library-htmx-rendering.md  doc-library-service-layer.md  ha-dashboard-credential-storage.md  ha-dashboard-ha-client-module-boundary.md  ha-dashboard-no-qa-environment.md  registry-decoupling-client-boundary.md  registry-decoupling-endpoint-auth.md  sidebar-nav-groups-cross-repo-sync.md  sidebar-nav-groups-render-boundary.md
docs/model-report/: model-decisions.md
docs/platform-restructure/: host-integration-guide.md  how-to-add-a-hosted-app.md  platform-restructure-design.md  platform-restructure-prd.md  secrets-and-accounts.md
docs/slices/: slice-1.md  slice-2.md  slice-3.md  slice-4.md  slice-5.md  slice-6.md  slice-7.md  slice-9.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: account-deletion.spec.ts  auth.spec.ts  dashboard.spec.ts  host-event-creator-boundary.spec.ts  import-pending-files.spec.ts  landing.spec.ts  logs.spec.ts  notifications.spec.ts  processing.spec.ts  profile.spec.ts  prompt.spec.ts  reset-password.spec.ts  sidebar.spec.ts  storage.spec.ts  upload.spec.ts
e2e/utils/: helpers.ts  jwt.ts
examples/: example.lmmoutput.txt  example.whatsapp.txt
infra/gcp_lb/: README.md  generate_url_map.py  provision-prod.ps1  provision-prod.sh  provision.ps1  provision.sh
migrations/: env.py
migrations/versions/: 6e2b192a0f9a_add_nav_collapsed_groups_to_users.py  a1b2c3d4e5f6_create_storage_configs_table.py  a7b8c9d0e1f2_add_reviewed_to_events.py  b2c3d4e5f6a7_add_oauth_token_expires_at_to_storage_configs.py  b8c9d0e1f2a3_add_partial_index_for_unreviewed_events.py  be144404ee27_create_users_table.py  c9e4b9bec690_add_oauth_accounts_table.py  d3e4f5a6b7c8_create_llm_prompts_table.py  e5f6a7b8c9d0_create_pipeline_tables.py  (+3 more)
scripts/: build_css.py  verify_css_build.py
tests/: conftest.py  test_auth.py  test_auth_backend_cookie_domain.py  test_auth_google.py  test_calendar_url.py  test_card_macro.py  test_chrome_jwt_interop.py  test_config.py  test_dashboard_page.py  test_date_parser.py  test_db_session.py  test_dropbox_storage.py  test_email_notifications.py  test_ephemeral_storage.py  test_events_api.py  test_events_table_template.py  test_gemini.py  test_google_drive_storage.py  test_health.py  test_import_pending_files_api.py  test_initials.py  test_internal_e2e.py  test_internal_registry.py  test_landing.py  test_llm_prompt_api.py  test_llm_prompt_model.py  test_logs_page.py  test_message_filter.py  test_onboarding_checklist.py  test_pipeline_e2e_gemini.py  test_pipeline_models.py  test_pipeline_notifications.py  test_pipeline_runner.py  test_processing_page.py  test_processing_progress.py  test_processing_run_detail.py  test_processing_sse.py  test_profile_page.py  test_prompt_page.py  test_prompt_reset.py  (+19 more)
(+135 files in other folders)
