[project]
name = "organize-me"
version = "0.1.0"
description = "OrganizeMe — extracts calendar events and tasks from conversation exports via LLM"
requires-python = ">=3.12"
dependencies = [
    "organizeme-chrome @ git+https://github.com/rustycoopes/organize-me@chrome-v0.3.0#subdirectory=packages/chrome",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "httpx-oauth>=0.16.1",
    "pydantic-settings>=2.14.2",
    "resend>=2.32.2",
    "twilio>=9.3.0",
    "cryptography>=44.0.0",
    "google-genai>=2.10.0",
    "python-dateutil>=2.9.0.post0",
    "sse-starlette>=2.1.0",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "types-python-dateutil>=2.9.0.20260518",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "twilio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
