[project]
name = "organize-me"
version = "0.1.0"
description = "OrganizeMe — extracts calendar events and tasks from conversation exports via LLM"
requires-python = ">=3.12"
dependencies = [
    "organizeme-chrome @ git+https://github.com/rustycoopes/organize-me@chrome-v0.8.0#subdirectory=packages/chrome",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "httpx-oauth>=0.16.1",
    "pydantic-settings>=2.14.2",
    "resend>=2.32.2",
    "python-dateutil>=2.9.0.post0",
    # app/api/internal/registry.py (organize-me#218): OIDC verification of the registry
    # endpoint's caller, mirroring event-creator's app/api/v1/internal_pipeline.py.
    "google-auth>=2.35",
    # Caches the OIDC-verification cert fetch - google-auth's own docs note that
    # verify_oauth2_token re-fetches Google's public certs on every call by default; wrapping the
    # session in CacheControl (google.auth.transport.requests already depends on it transitively)
    # lets repeated verifications reuse cached certs instead of a network round trip every request.
    "cachecontrol>=0.14",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "types-python-dateutil>=2.9.0.20260518",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]
# Build-only: the standalone Tailwind CLI binary (~35-40MB) + this package. Installed in the
# Docker build stage only (`uv sync --group build`) and never in the runtime stage
# (`uv sync --no-dev` excludes every non-default group) - see Dockerfile.
build = [
    "pytailwindcss==0.3.1",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
